# SmartTravelAssistantProject

./: .gitignore  AGENTS.md  DEV_NOTES.md  README.md  pyproject.toml  start_travel_agent.bat
app/: main.py  streamlit_app.py
backend/: __init__.py
backend/agents/: llm.py  nodes.py
backend/graph/: routing.py  state.py  workflow.py
backend/mcp/: amap.py  client.py  tool_registry.py
backend/schemas/: __init__.py  trip.py
data/reports/: chengdu_after_fix.html  chengdu_after_unresolved_route_fix.html  extended_5_cases_after_repairs.html  extended_5_cases_final.html  extended_5_cases_final_improved.html  extended_5_cases_report.html  extended_5_cases_with_lodging_detail.html  final_batch_plan_report.html  guilin_after_fix.html  guilin_after_local_threshold.html  guilin_after_lodging_route_location.html  guilin_after_unresolved_route_fix.html  latest_batch_plan_report.html  latest_batch_plan_report_after_repairs.html  shanxi_after_note_preserve.html  shanxi_after_strict_lodging.html  shanxi_final_check.html  test_batch_plan_report.html
mcp_servers/: __init__.py
mcp_servers/mock_travel_server/: __init__.py  server.py
scripts/: batch_plan_report.py  check_amap_mcp.py  check_amap_mcp_like_reference.py
tests/: test_amap_mcp.py  test_amap_parsing.py  test_amap_route_anomalies.py  test_llm_config.py  test_mcp_server.py  test_schemas.py  test_workflow.py
